<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LuasLingkrn">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <ImageView
                    android:id="@+id/imgLngkrn"
                    android:layout_width="wrap_content"
                    android:layout_height="250dp"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="false"
                    android:src="@drawable/lingkrn">

                </ImageView>
            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="30dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/luaslngkrn"
                    android:textSize="25dp"
                    android:textStyle="bold"

                    >

                </TextView>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="100dp"
                    android:layout_height="70dp"
                    android:paddingBottom="10dp"
                    android:text="@string/mskn_jari2"
                    android:textSize="20dp" />
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:paddingLeft="15dp"
                    android:paddingEnd="15dp"
                    android:paddingBottom="10dp"
                    android:text="@string/titik2"
                    android:textSize="20dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingLeft="10dp"

                    >

                    <EditText
                        android:id="@+id/edMsknsisi"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:width="250dp">

                    </EditText>
                </LinearLayout>


            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:paddingTop="20dp"

                >

                <Button
                    android:id="@+id/bttn_hasil"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/htg_luas"
                    android:textSize="22dp">

                </Button>

            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="20dp"
                android:paddingBottom="30dp">

                <TextView
                    android:id="@+id/shw_hsl"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:text="@string/hsl"
                    android:textSize="25dp"
                    android:textStyle="bold"

                    >

                </TextView>
            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>